fix: button spacing

--- a/src/pages/FormPage/FormPage.scss
+++ b/src/pages/FormPage/FormPage.scss
@@ -31,3 +31,7 @@
     margin-bottom: 2rem;
   }
 }
+
+.profile__btn-container{
+  margin-bottom: 2rem;
+}
